03-basic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-workshop-first-pod
  labels:
    app.kubernetes.io/name: k8s-workshop-first-pod
    app.kubernetes.io/instance: instance-1
spec:
  containers:
    - name: container
      image: gcr.io/google-samples/kubernetes-bootcamp:v1
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
