10-basic-node-app-deployment-inject-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-node-js-app
  labels:
    name: basic-node-js-app
  annotations:
    kubernetes.io/change-cause: "Deployed Version 3"
spec:
  replicas: 2
  selector:
    matchLabels:
      name: basic-node-js-app
  template:
    metadata:
      labels:
        name: basic-node-js-app
    spec:
      containers:
        - name: basic-node-js-app
          image: docker.io/k8sworkshop07jul/591242-basic-node-app:v3
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
