08-basic-node-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-node-js-app
  labels:
    name: basic-node-js-app
spec:
  selector: #Selection criteria to include a specific set of pods to be part of this service.
    name: basic-node-js-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
