09-basic-node-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-node-js-app
  labels:
    name: basic-node-js-app
spec:
  rules:
    - host: k8s-workshop.tcs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basic-node-js-app
                port:
                  number: 80
